/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-10-12 06:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/tiff/tif_aux.c
  * contrib/tiff/tif_dirread.c
    ! pacify GCC warnings

  * source/rtl/regex.c
  * source/odbc/odbc.c
  * contrib/pdflite/tiff/tif_jpeg.c
  * contrib/pdflite/tiff/tif_ojpeg.c
  * contrib/pdflite/tiff/tif_predict.c
    ! pacify POCC warnings

  + make_xc.bat
  * winmake/makefile.pc
    ! added XCC build stuffs

  * source/common/hbver.c
  * source/compiler/hbslex.c
    ! provide working paths for XCC

  * contrib/tiff/tif_config.h
    ! undef HAVE_SEARCH_H for XCC

  * contrib/tiff/tif_win32.c
    ! definition of vsnprintf for XCC

  * contrib/tiff/tif_dirread.c
    ! definition of TIFF_UINT32_MAX and TIFF_INT64_MAX for XCC

  * source/rtl/is.c
    ! temporary hack for isacii to enable XCC to compile

  * contrib/what32/source/_winsock.c
  * source/vm/dlmalloc.c
    ! fix to compile with XCC and MT linking with PellesC 5 and below

2012-10-11 08:28 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/tiff/tif_pixarlog.c
  * contrib/tiff/tif_packbits.c
  * contrib/tiff/tif_fax3.c
  * contrib/tiff/tif_jpeg.c
  * contrib/tiff/tif_dirwrite.c
  * contrib/tiff/tif_read.c
  * contrib/tiff/tiffio.h
  * contrib/tiff/tiffiop.h
  * contrib/tiff/tif_write.c
  * contrib/tiff/tif_dirinfo.c
  * contrib/tiff/tif_dirread.c
  * contrib/tiff/tiff.h
  * contrib/tiff/tif_print.c
  * contrib/tiff/tiffvers.h
    ! updated to version 4.0.3

2012-10-11 02:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/compiler/harbour.c
    ! variable initialization to pacify GCC warnings

2012-10-11 01:03 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/hbsqlit3/sqlite3.c
  * contrib/hbsqlit3/sqlite3.h
    ! updated to version 3.7.14.1
