@@ -354,9 +354,9 @@ TIFFReadEncodedStrip(TIFF* tif, uint32 strip, void* buf, tmsize_t size)
 		stripsize=size;
 	if (!TIFFFillStrip(tif,strip))
 		return((tmsize_t)(-1));
-	if ((*tif->tif_decodestrip)(tif,buf,stripsize,plane)<=0)
+	if ((*tif->tif_decodestrip)((TIFF *)tif,(uint8 *)buf,stripsize,plane)<=0)
 		return((tmsize_t)(-1));
-	(*tif->tif_postdecode)(tif,buf,stripsize);
+	(*tif->tif_postdecode)(tif,(uint8 *)buf,stripsize);
 	return(stripsize);
 }
 
